checked, if record edited or not, and added diffForHumans for updated_at column

--- a/src/views/user/posts/posts.css
+++ b/src/views/user/posts/posts.css
@@ -34,6 +34,13 @@
 }
 
 .check {
+  display: inline-block;
   margin: 0;
   margin-top: 10px;
+  font-size: 13px;
+}
+
+.edited {
+  color: dimgray;
+  font-size: 11px;
 }
