--- a/src/views/admin/posts/posts.css
+++ b/src/views/admin/posts/posts.css
@@ -29,10 +29,16 @@
 }
 
 .card .form-check {
+  display: inline-block;
   padding-left: 0;
   margin-top: 10px;
 }
 
 .checked {
   display: none;
+}
+
+.edited {
+  color: dimgray;
+  font-size: 12px;
 }
