--- a/src/views/user/all-posts/all-posts.css
+++ b/src/views/user/all-posts/all-posts.css
@@ -18,7 +18,7 @@
 
 .card img {
   width: 100%;
-  height: 220px;
+  height: 240px;
   object-fit: cover;
 }
 
@@ -31,4 +31,10 @@
 
 .show-modal {
   margin-bottom: 10px;
+}
+
+.like-system button {
+  border: none;
+  background: none;
+  font-size: 18px;
 }
