--- a/src/layouts/user/user.css
+++ b/src/layouts/user/user.css
@@ -16,6 +16,8 @@
 }
 
 .user {
+  margin-top: 57px;
+  padding: 50px 0;
   min-height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../../assets/images/background.jpg');
   background-size: cover;
