--- a/src/components/admin/menu/menu.css
+++ b/src/components/admin/menu/menu.css
@@ -1,7 +1,3 @@
-.nav-item:first-child {
-  margin-right: 10px;
-}
-
 .menu a {
   color: #ffffff !important;
   cursor: pointer;
@@ -15,8 +11,8 @@
   background: #242424;
 }
 
-.navbar-toggler {
-  background: #ffffff;
+.navbar-brand {
+  font-size: 18px;
 }
 
 .toggled {
@@ -72,8 +68,15 @@
     flex-basis: 100%;
   }
 
-  .navbar-brand {
-    width: 200px;
+  .navbar-nav {
+    align-items: center;
+  }
+
+  .dropdown-menu {
+    position: fixed !important;
+    right: 0;
+    left: 0;
+    top: 53px;
   }
 
   .sidebar {
@@ -81,4 +84,17 @@
     left: -100%;
     padding: 100px 0 0;
   }
+}
+
+.navbar-nav .dropdown-menu {
+  overflow: auto!important;
+  max-height: 270px!important;
+}
+
+.dropdown span:first-child {
+  pointer-events: none;
+}
+
+.icon {
+  font-size: 18px;
 }
