--- a/src/layouts/user/user.css
+++ b/src/layouts/user/user.css
@@ -1,5 +1,35 @@
-.is-invalid {
-  border-color: #dc3545 !important;
+.was-validated .form-control:invalid, .form-control.is-invalid  {
+  border-color: red !important;
+}
+
+.card {
+  padding: 15px;
+  transition: box-shadow .3s;
+  background: transparent;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 30px;
+  overflow: hidden;
+  margin-bottom: 10px;
+  border: 2px solid white;
+}
+
+.card:hover {
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.9);
+}
+
+.card-body {
+  border-radius: inherit;
+  background: rgba(255, 255, 255, 0.7);
+  margin-top: 10px;
+}
+
+.card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: inherit;
 }
 
 .loading {
@@ -72,10 +102,6 @@ input:focus {
   box-shadow: none !important;
 }
 
-.is-invalid {
-  border-color: #dc3545 !important;
-}
-
 .loading {
   display: flex;
   justify-content: center;
@@ -125,17 +151,6 @@ label {
 .update-button {
   background: #3b3b40;
   color: #ffffff;
-}
-
-input, textarea {
-  border: none !important;
-  border-bottom: 3px solid #000000 !important;
-  background: none !important;
-}
-
-input:focus {
-  background: none;
-  box-shadow: none !important;
 }
 
 .page-item.active .page-link  {
