--- a/src/views/user/profile/profile.css
+++ b/src/views/user/profile/profile.css
@@ -3,21 +3,13 @@
   text-align: center;
 }
 
-.profile {
-  overflow: auto;
-  padding: 50px 0;
-  margin-top: 55px;
-}
-
-.card {
-  overflow: hidden;
-  padding: 20px;
-  border-radius: 5px;
-  background: #ffffff;
+input, textarea {
+  border-bottom: 3px solid #6a6fc5 !important;
 }
 
 .card-header {
-  background: #393939;
+  border-radius: inherit;
+  background-color: #6a6fc5;
   color: #ffffff;
 }
 
@@ -26,14 +18,12 @@
 }
 
 label {
-  color: #000000;
+  color: #6a6fc5;
 }
 
 input {
   border: none;
-  border-bottom: 3px solid #000000;
   background: none;
-  color: #000000;
 }
 
 input:focus {
