--- a/src/views/user/auth/register/register.css
+++ b/src/views/user/auth/register/register.css
@@ -3,12 +3,6 @@
   text-align: center;
 }
 
-.register {
-  overflow: auto;
-  padding: 50px 0;
-  margin-top: 55px;
-}
-
 .register-form {
   padding: 20px;
   border-radius: 5px;
@@ -16,14 +10,11 @@
 }
 
 label {
-  color: #000000;
+  color: #6a6fc5;
 }
 
 input {
-  border: none;
-  border-bottom: 3px solid #000000;
-  background: none;
-  color: #000000 !important;
+  border-bottom: 3px solid #6a6fc5 !important;
 }
 
 .submit-register {
